audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:2.27.0
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "800m"
            memory: "800Mi"
          requests:
            cpu: "250m"
            memory: "400Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /config
        - name: metadata
          mountPath: /metadata
        - name: data
          mountPath: /audiobooks
        - name: backups
          mountPath: /backups
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: metadata
        persistentVolumeClaim:
          claimName: metadata-pvc
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
      - name: backups
        persistentVolumeClaim:
          claimName: backups-pvc
